--- a/QRCity/app/src/main/res/layout/fragment_info.xml
+++ b/QRCity/app/src/main/res/layout/fragment_info.xml
@@ -3,15 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.InfoFragment">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="Info" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="411dp"
+        app:srcCompat="@drawable/img" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="10dp">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="128dp"
+            android:layout_marginBottom="284dp"
+            android:text="About QRCity"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="397dp"
+            android:layout_height="215dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="68dp"
+            android:text="QRCity is a thrilling mobile application that challenges players to hunt for the coolest QR Codes
+around them while competing for the highest score. With a simple scan, players can discover hidden barcodes and QR codes scattered throughout their surroundings, each offering different point values based on their difficulty to find. The game encourages players to explore their city, navigate new neighborhoods, and discover hidden gems, all while engaging in a fun and interactive scavenger hunt. With QRCity, players can compete against friends or join global leaderboards to see who can earn the most points and become the ultimate QR code hunter. "
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </FrameLayout>
